<resources>
    <string name="app_name">NeWork</string>
    <string name="add_post">Add post</string>
    <string name="add_event">Add event</string>
    <string name="job_preview">%s at %s</string>
    <string name="from_date">from %s</string>
    <string name="to_date">to %s</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="name">name</string>
    <string name="authentication">Authentication</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="fields_shouldn_t_be_empty">Fields shouldn\'t be empty</string>
    <string name="sign_out">Sign out</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="add_job">Add job</string>
    <string name="invalid_link">Invalid link</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="go_to">Go to</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="link">Link</string>
    <string name="job_request_error">Company name, position and from shouldn\'t be empty</string>
    <string name="invalid_date">Date should be in 01/01/1990 format</string>
    <string name="add_link">Add link</string>
    <string name="add_image">Add image</string>
    <string name="add_video">Add video</string>
    <string name="add_audio">Add audio</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="mention_someone">Mention someone</string>
    <string name="send_post">Send post</string>
    <string name="remove_attachment">Remove attachment</string>
    <string name="add_attachment">Add attachment</string>
    <string name="content_couldn_t_be_empty">Content couldn\'t be empty</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="mention_user">Mention\u00A0user</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="participate">Participate</string>
    <string name="leave">Leave</string>
    <string name="event_description">Event description</string>
    <string name="add_speaker">Add speaker</string>
    <string name="set_time">Set time</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="please_choose_event_date">Please, choose event date</string>
    <string name="please_choose_a_future_date">Please choose a future date</string>
    <string name="send_event">Send event</string>
    <string name="invalid_coordinates_format">Invalid coordinates format</string>
    <string name="join">Join</string>
    <string name="error_desc_400">Oops! Something\'s not quite right with your request.</string>
    <string name="error_desc_401">Hold on! You need proper authorization for this.</string>
    <string name="error_desc_403">Sorry, but you\'re not allowed to access this.</string>
    <string name="error_desc_404">Uh-oh! The thing you\'re looking for? Nowhere to be found.</string>
    <string name="error_desc_500">Whoops! Our server seems to be having a bad day. Try again later.</string>
    <string name="error_desk_unknown">Hmm, something unexpected happened. Try again later</string>
    <string name="check_connection">Check your internet connection</string>

</resources>