<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.posts.EditPostFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                tools:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                tools:text="User Name" />

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:src="@drawable/cross_icon" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/editContentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/event_description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/videoAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone">

                    <FrameLayout
                        android:id="@+id/thumbnailContainer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />

                        <ImageView
                            android:id="@+id/playVideoButton"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:src="@drawable/play_icon" />

                    </FrameLayout>

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/videoPlayerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:use_artwork="true" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/audioAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/playButton"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/play_icon" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/progress_background"
                        android:max="100"
                        android:progress="0"
                        android:progressDrawable="@drawable/progress_drawable" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="4dp"
                    android:src="@color/black"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="2dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventTypeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_gray_outlined"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="10dp"
                        android:layout_marginEnd="10dp"
                        android:paddingBottom="2dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:text="@string/offline" />

                    <LinearLayout
                        android:id="@+id/manageAttachmentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_blue"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingEnd="20dp">

                        <ImageView
                            android:id="@+id/manageAttachmentIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/attachment_icon" />

                        <TextView
                            android:id="@+id/manageAttachmentText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:ellipsize="end"
                            android:layout_gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:text="@string/add_attachment" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linkContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/link_icon" />

                    <EditText
                        android:id="@+id/link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:hint="@string/link"
                        android:lines="1"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="?colorSecondary"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="2dp"
                        android:src="@drawable/events_icon" />

                    <TextView
                        android:id="@+id/datetimeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/set_time"
                        android:textColor="?colorSecondary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/speakersContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="2dp"
                        android:src="@drawable/speakers_icon" />

                    <TextView
                        android:id="@+id/speakers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/add_speaker"
                        android:textColor="?colorSecondary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/coordsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/pin_icon" />

                    <EditText
                        android:id="@+id/coords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:hint="00.000000, 00.000000"
                        android:lines="1"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="?colorSecondary"
                        android:textSize="14sp" />
                </LinearLayout>

                <com.yandex.mapkit.mapview.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textColor="#FF0000"
                    tools:text="Error" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/sendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_green"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/send_event"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/usersContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_transparent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="48dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="100dp"
                android:background="@color/gray"
                app:cardCornerRadius="28dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:itemCount="10"
                    tools:listitem="@layout/user_item" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </FrameLayout>


</FrameLayout>